# fxg

./: .gitignore  Cargo.toml  LICENSE  README  README.md  TODO  fxg-header.html  spec.fxg  spec.html  template.html  test.fxg  test.fxgdb  test.html  test_simple.fxg
fxg-language-support/: CHANGELOG.md  README.md  language-configuration.json  package.json  remarks.txt  vsc-extension-quickstart.md
fxg-language-support/syntaxes/: fxg.tmLanguage.json
src/: blockqoutes.rs  document.rs  error.rs  extensions.rs  lexer.rs  main.rs  parser.rs  server.rs
src/compiler/: document.rs  document_nodes.rs  header.rs  lexer.rs  mod.rs  nodes.rs
src/project/: data.rs  index.fxg  mod.rs  new.rs  template.html
test/: code.rs  emphasis.rs  headings.rs  horizontal_rules.rs  html_entities.rs  image.rs  mod.rs
test_project/: config.yml
test_project/src/: index.fxg
