[package]
name = "fxg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
const_format = { version = "0.2.32", features = ["fmt"] }
hyper = { version = "0.14.27", features = ["full"], optional = true }
logos = "0.13.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
tokio = { version = "1.33.0", features = ["full"], optional = true }

[features]
default = ["developer"]
developer = ["dep:hyper", "dep:tokio"]
contributor = ["developer"]
