[package]
name = "fxg"
version = "0.2.1"
edition = "2024"
description = "A markup language where the syntax looks as similar as possible to the rendered version"
license = "MIT"
documentation = "https://github.com/zTags/fxg/wiki"
homepage = "https://github.com/zTags/fxg"
repository = "https://github.com/zTags/fxg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
colored = "3.0.0"
const_format = { version = "0.2.32", features = ["fmt"] }
logos = "0.15.1"
regex = { version = "1.10.2", optional = true }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
tokio = { version = "1.33.0", features = ["full"], optional = true }

[features]
default = ["developer"]
developer = ["dep:regex"]
contributor = ["developer"]
